# UnityOSGB

./: .gitignore  Assembly-CSharp.csproj  README.md  UniRx.Examples.csproj  UniRx.csproj  UnityOSGB.sln  osgEx.Editor.csproj  osgEx.Runtime.csproj  osgEx.csproj
Assets/: CameraMove.cs
Assets/ReaderNative/: GlobalOsgInterface.cs  MeshLoader.cs  PagedChildID.cs
Assets/ReaderOSGB/: GeometryData.cs  GeometryUtils.cs  ObjectBase.cs  PagedData.cs  ReaderOSGB.cs  TaskManager.cs  TextureUtils.cs  osg_Array.cs  osg_BufferData.cs  osg_BufferObject.cs  osg_Callback.cs  osg_ClusterCullingCallback.cs  osg_CoordinateSystemNode.cs  osg_DrawArrays.cs  osg_DrawElementsUByte.cs  osg_DrawElementsUInt.cs  osg_DrawElementsUShort.cs  osg_Drawable.cs  osg_Drawable_2.cs  osg_ElementBufferObject.cs  osg_EllipsoidModel.cs  osg_Geode.cs  osg_Geometry.cs  osg_Geometry_2.cs  osg_Group.cs  osg_LOD.cs  osg_Material.cs  osg_MatrixTransform.cs  osg_Node.cs  osg_NodeCallback.cs  osg_Object.cs  osg_PagedLOD.cs  osg_PrimitiveSet.cs  osg_ShadeModel.cs  osg_StateAttribute.cs  osg_StateSet.cs  osg_Texture.cs  osg_Texture2D.cs  osg_Transform.cs  osg_Vec2Array.cs  (+4 more)
Assets/Scenes/: NewBehaviourScript.cs  basic_loader.unity  osgb_loader.unity  osgb_loaderSettings.lighting
Assets/osgEx/: TestLoader.cs  osgEx.asmdef
Assets/osgEx/Resources/osg_Resources/: Standard.asset  URP.asset  default.asset
Assets/osgEx/osg/: osg_BlendFunc.cs  osg_BufferData.cs  osg_DrawArrays.cs  osg_DrawElementsUInt.cs  osg_EllipsoidModel.cs  osg_Geode.cs  osg_Geometry.cs  osg_Group.cs  osg_LOD.cs  osg_Node.cs  osg_Object.cs  osg_Reader.cs  osg_StateAttribute.cs  osg_Texture2D.cs  osg_Transform.cs  osg_UserDataContainer.cs  osg_ValueObject.cs  osg_Vec2Arrray.cs  osg_Vec3Aarray.cs  osg_Vec4Array.cs
Assets/osgEx/osg.Editor/: osgEx.Editor.asmdef  osg_MaterialDataEditor.cs
Assets/osgEx/osg.Runtime/: osgEx.Runtime.asmdef  osg_MaterialData.cs
Assets/osgEx/osg.Runtime/mono/: osgManager.cs  osgMono_Base.cs  osgMono_Geode.cs  osgMono_Geometry.cs  osgMono_LoadHelper.cs  osgMono_PagedLOD.cs
Assets/osgEx/osg.Runtime/osg/: osg_Array.cs  osg_AsyncOperation.cs  osg_BlendFunc.cs  osg_BufferObject.cs  osg_Callback.cs  osg_ClusterCullingCallback.cs  osg_DrawElementsUByte.cs  osg_DrawElementsUShort.cs  osg_Drawable.cs  osg_ElementBufferObject.cs  osg_Geode.cs  osg_Geometry.cs  osg_Group.cs  osg_Material.cs  osg_MatrixTransform.cs  osg_NodeCallback.cs  osg_PagedLOD.cs  osg_PrimitiveSet.cs  osg_Reader.cs  osg_ShadeModel.cs  osg_StateSet.cs  osg_Texture.cs  osg_Texture2D.cs  osg_ValueObject.cs  osg_Vec4ubArray.cs  osg_VertexBufferObject.cs
Assets/osgEx/osg.Runtime/tools/: Singleton.cs  TransformEx.cs  VirtualCameraController.cs  aCameraControl.cs
Assets/osgEx/osgMono/: Geode.cs  PagedLOD.cs  PagedNode.cs  osgHelper.cs  osgManager.cs  osgMono_Base.cs  osgMono_Geometry.cs  osgMono_LoadHelper.cs  osgMono_PagedLOD.cs  osg_ReaderMonoEx.cs
Assets/osgEx/tools/: ComponentEx.cs
NativePlugin/: CMakeLists.txt  Export.cpp  Export.h  InterfaceBase.h  Intersector.cpp  Intersector.h  UpdateDatabasePager.cpp  UpdateDatabasePager.h
ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: default-2021.dwlt
